css/style.css
lbody, p, div, section, article, h1, h2, h3, h4, h5, h6 {margin:0;padding:0;}

/*** Colours
Brown - #554741
Green - #5A867D
Dark Green - #082622
*/
.page {font-family: 'Lato', sans-serif;background-color: #456B63;}

h1 {font-size: 38px;}

h2 {font-size: 28px;}

h3 {font-size: 25px;}

h4 {font-size: 20px;}

h5 {font-size: 15px;}

p {margin-top: 0.75em;}

a { color: inherit; /* blue colors for links too */ text-decoration: inherit; /* no underline */}

.clearfix {overflow: auto;zoom: 1;clear: both;}
.button {padding: 1.25em 0em;border: 2px solid #5A867D;color: #5A867D;background-color: white;}
.page-heading {font-size: 42px;font-weight: 400;margin-bottom: 0.5em;}
.button:hover {background-color: #5A867D;color: white;}
.content-wrapper {margin-top: -200px;}
.content {position: static;
    width: 1100px;
    background-color: #fff;
    margin: 50px auto;
    padding-left: 50px;
    margin-bottom: 1em;
    margin-top: 50px;
    padding-right: 90px;}
.banner-box {background-color: red;}
 .home .first-2 {
    background-color: rgba(217,214,209,.9);
    left: 190px;
    width: 320px;
    padding: 0;
    border-radius: 5px;
 }
 .home .first-2 img {
    display: inline-block;
    padding-top: 15px;
 }
 .home .first-2 h6 {
    font-size: 16px;
    font-weight: 700;
    background-image: url('../images/Button.png');
    height: 41px;
    width: 226px;
    padding: 20px 20px 20px 0;
    display: inline-block;
    text-align: center;
    vertical-align: top;
 }
 .content-2 {
    position: absolute;
    width: 10px;
    background-color: #fff;
    margin: 0 auto;
    padding: 10px;
    margin-bottom: 1em;
 }


/**

* Navigation 

**/

.desktop {display: block;}
.mobile {display: none;}
.header-top {width: 98%;padding: 1.5em 1%;background-color: white;}
.header-top div {width: 760px;margin: 0 auto;}
.header-top div img:first-child {display: inline-block;	float: left;width: 250px;}
.header-top div img:nth-child(2) {display: inline-block;float: right;vertical-align: bottom;padding-top: 0.4em;cursor: pointer;	}
.header-top div h2 {margin-right: 20px;	margin-top: 10px;display: inline-block;	float: right;}
.header-bottom {width: 100%;background-color: rgba(255, 255, 255, 0.8);}
.header-bottom nav {margin: 0 auto;width: 768px;}
.header-bottom nav ul {	float: right;padding: 0.3em 0 0.3em 0;}
.header-bottom nav ul li {display: inline-block;margin-right: 20px;	color: black;}
.header-bottom nav ul li:nth-child(6) {margin-right: 0;}
.header-bottom nav ul li h5 {font-weight: 400;}
.mobile.header-bottom nav ul {float: none;width: 320px;	margin: 0 auto;padding: 1em 0 1em 0;text-align: center;}
.mobile.header-bottom nav ul li {}
.mobile.header-bottom nav ul li h5 {}
.mobile.header-bottom {	}
.mobile.dropdown ul {background-color: white;list-style-type: none;padding: 0 1em 0em 1em;margin: 0;}
.mobile.dropdown li {display: inline-block;	width: 95%;padding: 1.25em 2.5%;border-bottom: 1px solid #5A867D;}
.mobile.dropdown li:nth-child(7) {border: none;	}


/**

* Backgrounds

**/

.layer-1-background {position: absolute;top: 0;width: 100%;height: 590px;background-image: url('../images/dark-wood.png.webp');background-color: #554741;z-index: -3;}

.home {background-color: #5A867D;}

/**

* BannerImage

**/

.banner-image {top: 0;width: 1500px;margin: 0 auto;	height: 670px;z-index: -2;}
.banner-image div {width: 100%;height: 100%;background-image: url('../images/denman-home.jpg.webp');background-repeat: no-repeat;background-size: cover;}
.home .first {background-color: rgba(217,214,209,0.9);margin-left: 890px;width: 320px;padding: 0;border-radius: 5px;}
.home .first a {margin-top: 1em;display: block;color: #000000;}
.home .first h6 {font-size: 16px;font-weight: 700;background-image: url('../images/Button.png');height: 41px;width: 226px;padding: 20px 20px 20px 0px;display: inline-block;text-align: center;
	vertical-align: top;}
.home .first img {display: inline-block;padding-top: 15px;}
.home .second {width: 860px;padding: 70px;}
.home .second h1 {margin-bottom: 0.5em;}
.home .second h3 {margin-bottom: 0.7em;}
.home .third {width: 1000px;padding: 0em;display: flex;}
.home .third div {background-color: white;width: 30%;padding: 0em 1%;display: inline-block;text-align: center;align-self: center;}
.home .third img {display: inline-block;width: 70%;height: 500px;}
.home .third .cms-content h4 {font-weight: 400;}
.home .third .cms-content h4:nth-child(3), .home .third .cms-content h4:first-child {margin-top: 0.4em;}
.home .fourth {position: relative;padding: 0;width: 1000px;height: 300px;}
.home .fourth #google-maps {position: relative;	height: 300px;	width: 70%;	display: inline-block;	border: none;}
.home .fourth div:nth-child(2) {width: 26%;	display: inline-block;	vertical-align: top;padding: 3em 2%;text-align: center;}
.home .fourth h4 {margin-top: 0.75em;}
.home .fourth p {margin: 0;}

/**

* DOCTORS

**/

.page-id-16 p {	margin-top: 0.2em;}
.page-id-16 #staff-info p {	margin-top: 0.5em;}
.page-id-16 section, .page-id-24 section, .page-id-302 section {background-color: white;padding: 100px;width: 1000px;	margin: 100px auto;}
.page-id-16 #staff-info {width: 1000px;height: auto;margin: 50px auto 0;overflow: hidden; position: relative; -webkit-box-shadow: 7px 8px 5px 0px rgba(0,0,0,0.12);-moz-box-shadow: 7px 8px 5px 0px rgba(0,0,0,0.12);
	box-shadow: 7px 8px 5px 0px rgba(0,0,0,0.12);padding-bottom: 40px;}
.page-id-16 #staff-info h4 {margin-top: 1em;}
.page-id-16 #staff-info h2 {color: #5A867D;}
.page-id-16 #staff-info h5:nth-child(2) {margin-top: 0.2em;	font-weight: 700;font-size: 16px;}
.page-id-16 #staff-info img {width: 350px;margin-top: 50px;margin-right: 50px;float: right;}
.page-id-16 #staff-info .staff-content {float: right;width: 50%;padding: 0.5em 2em 0.5em 0.5em;margin-top: 50px;}
.page-id-16 #staff-info span {font-weight: bold;}
.page-id-16 .staff-grid {width: 700px;display: inline-block;vertical-align: top;font-size: 0;}
/* ... */

